# histplot

./: .gitignore  README.md  histplot.whl  histplot_settings.ini  pyproject.toml
demo/data/: testdata01.csv  testdata02.csv  testdata03.csv
histplot/: __init__.py  gui.py  main.py
