[project]
name = "Histplot"
version = "1.0.0"
authors = [
  { name="Andreas B"}
]

description = "Plot histograms from multiple files combined on a userfriendly GUI using matplotlib"
license = "MIT"
readme = "README.md"
requires-python = ">=3.7"

classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Framework :: Matplotlib",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Utilities"
]
keywords = ["matplotlib", "histogram", "multiple files", "hist", "GUI"]

dependencies = [
  "numpy",
  "pandas",
  "matplotlib"
]


[project.urls]
Homepage = "https://github.com/andreasmz/histplot"
Repository = "https://github.com/andreasmz/histplot"
Issues = "https://github.com/andreasmz/histplot/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"